# swagger_output.json
@@ -1127,6 +1127,61 @@
         "responses": {}
       }
     },
+    "/campaign/request-payout/{id}": {
+      "post": {
+        "tags": [
+          "campaign"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/campaign/getRequestedPayoutCampaigns": {
+      "get": {
+        "tags": [
+          "campaign"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
     "/admin/approveCampaign/{id}": {
       "put": {
         "tags": [
@@ -1802,13 +1857,31 @@
                 "logo": {
                   "example": "any"
                 },
-                "socialLinks": {
+                "icon": {
+                  "example": "any"
+                },
+                "webName": {
+                  "example": "any"
+                },
+                "facebook": {
+                  "example": "any"
+                },
+                "twitter": {
+                  "example": "any"
+                },
+                "description": {
+                  "example": "any"
+                },
+                "instagram": {
                   "example": "any"
                 },
                 "termsAndConditions": {
                   "example": "any"
                 },
                 "privacyPolicy": {
+                  "example": "any"
+                },
+                "pagesData": {
                   "example": "any"
                 }
               }
